# Projet-Annuel

./: Cargo.toml  PMC_version1  README.md  image_quality.py  premier_point_avancement_pa.md
learning_emotions/: Cargo.toml
learning_emotions/src/: lib.rs
pa/: settings.py  urls.py  views.py
pa/pa/: asgi.py  settings.py  views.py  wsgi.py
pa/templates/: index.html
src/: PMC.rs  lib.rs  linear_model.rs  main.rs
templates/: index.html
